--- a/reto-1/reto-1/public/index.html
+++ b/reto-1/reto-1/public/index.html
@@ -30,7 +30,7 @@
   margin: 0;
   padding: 0;
   font-size: 15px;
-  background: #F5F5F5;">
+  box-sizing: border-box;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
